# CAndCPlusPlus

./: .gitignore  CMakeLists.txt  HelloWorld.cpp  README.md  VariablesAndDataTypes.cpp  arraysAndFunctions.cpp  arraysAndVectors.cpp  classes.cpp  const.cpp  containers.cpp  dataTypes.cpp  enumerations.cpp  functions.cpp  ifAndSwitch.cpp  ifSwitchWhile.cpp  inheritance.cpp  inputOutput.cpp  lambdaFunctions.cpp  loops.cpp  math.cpp  pointers.cpp  random.cpp  readingAndWritingFiles.cpp  references.cpp  regular_expressions.vscode  simpleFunctions.cpp  tuple.cpp  userInput.cpp
CTutorial/: UserInput.c  main.c  struct.c  writingFiles.c
Tasks/: gender.hpp  healthstatus.hpp  hello_world.cpp  task1.cpp  task2.cpp  task3.cpp  task_0_1.cpp  task_0_3.cpp  task_1_1.cpp  task_1_2a.cpp  task_1_2b.cpp  task_1_3.cpp  task_2_1.cpp  task_2_2-3.cpp  task_2_4-header.hpp  task_2_4.cpp  task_3_1.cpp  task_3_2.cpp  task_3_3.cpp
multipleFiles/: cppFile.cpp  headerFile.hpp
treeStruct/: tree.cpp
