cmake_minimum_required (VERSION 3.4)

# set the project name
project (cAndCPlusPlus)

# add the executable
add_executable (HelloWorld HelloWorld.cpp)
add_executable (Pointers pointers.cpp)
add_executable (VariablesAndDataTypes VariablesAndDataTypes.cpp)
add_executable (Math math.cpp)
add_executable (InputOutput inputOutput.cpp)
add_executable (Containers containers.cpp)
add_executable (Functions functions.cpp)
add_executable (IfAndSwitch ifAndSwitch.cpp)
add_executable (Loops loops.cpp)
add_executable (Classes classes.cpp)
add_executable (Inheritance inheritance.cpp)
add_executable (Const const.cpp)
add_executable (ReadingAndWritingFiles readingAndWritingFiles.cpp)
add_executable (LambdaFunctions lambdaFunctions.cpp)
add_executable (References references.cpp)
add_executable (Enumerations enumerations.cpp)
add_executable (Tuple tuple.cpp)

# Multiple Files
add_executable (CppFile multipleFiles/cppFile.cpp)

# Tasks
add_executable (Task_0_1 Tasks/task_0_1.cpp)
add_executable (Task_0_2 Tasks/task_0_2.cpp)
add_executable (Task_0_3 Tasks/task_0_3.cpp)
add_executable (Task_1_1 Tasks/task_1_1.cpp)
add_executable (Task_1_2a Tasks/task_1_2a.cpp)
add_executable (Task_1_2b Tasks/task_1_2b.cpp)
add_executable (Task_1_3 Tasks/task_1_3.cpp)
add_executable (Task_2_1 Tasks/task_2_1.cpp)
add_executable (Task_2_2-3 Tasks/task_2_2-3.cpp)
add_executable (Task_2_4 Tasks/task_2_4.cpp)
add_executable (Task_3_1 Tasks/task_3_1.cpp)
add_executable (Task_3_2 Tasks/task_3_2.cpp)
add_executable (Task_3_3 Tasks/task_3_3.cpp)
